[gd_scene load_steps=9 format=3 uid="uid://b8rtifa67b1ug"]

[ext_resource type="Script" path="res://Escenas/game_over.gd" id="1_6nevw"]
[ext_resource type="Texture2D" uid="uid://bvnygybcqrp4v" path="res://imagenes/GameOver.png" id="2_yteiv"]

[sub_resource type="Animation" id="Animation_q7n7f"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 0.454902)]
}

[sub_resource type="Animation" id="Animation_wggl8"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 0.533333)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mob1n"]
_data = {
"RESET": SubResource("Animation_q7n7f"),
"fade_in": SubResource("Animation_wggl8")
}

[sub_resource type="Animation" id="Animation_mcbm5"]
resource_name = "GameOver"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_ycswu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2hk2"]
_data = {
"GameOver": SubResource("Animation_mcbm5"),
"RESET": SubResource("Animation_ycswu")
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_6nevw")

[node name="BackgroundFade" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 1.00087
anchor_bottom = 1.00154
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0)

[node name="exit_button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.269097
anchor_top = 0.603395
anchor_right = 0.425347
anchor_bottom = 0.679012
text = "PAL LOBBY"

[node name="retry_button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.552083
anchor_top = 0.608025
anchor_right = 0.710938
anchor_bottom = 0.682099
offset_top = -3.05176e-05
text = "DENUEO"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mob1n")
}
autoplay = "fade_in"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(566, 330)
texture = ExtResource("2_yteiv")
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
libraries = {
"": SubResource("AnimationLibrary_c2hk2")
}
autoplay = "GameOver"

[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="retry_button" to="." method="_on_retry_button_pressed"]
